--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.demo.example">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -16,7 +15,7 @@
         android:name=".DailyIncomeExpenseManager"
         android:allowBackup="true"
         android:hardwareAccelerated="true"
-        android:icon="@drawable/icon200"
+        android:icon="@drawable/expense_tracker"
         android:label="ExpenseTracker"
         android:largeHeap="true"
         android:requestLegacyExternalStorage="true"
